--- a/config
+++ b/config
@@ -22,7 +22,7 @@ key = /etc/apache2/ssl/server.key
 # pidfile = /var/run/calypso.pid
 # current user principal; path to the default collection for a user
 # for clients that use it (RFC5397)
-user_principal = /+%(user)s
+user_principal = /%(user)s
 # base URL if / is not the CalDAV root
 base_prefix = /
 
